--- a/src/Frontend/MainPage.form
+++ b/src/Frontend/MainPage.form
@@ -79,7 +79,7 @@
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="jButton4" min="-2" pref="123" max="-2" attributes="0"/>
                   </Group>
-                  <Component id="mainCanvac" min="-2" max="-2" attributes="0"/>
+                  <Component id="mainCanv" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
           </Group>
@@ -98,7 +98,7 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
                       <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
-                      <Component id="mainCanvac" min="-2" max="-2" attributes="0"/>
+                      <Component id="mainCanv" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="btNightM" min="-2" pref="24" max="-2" attributes="0"/>
                   </Group>
@@ -140,7 +140,7 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btNightMActionPerformed"/>
       </Events>
     </Component>
-    <Container class="javax.swing.JPanel" name="mainCanvac">
+    <Container class="javax.swing.JPanel" name="mainCanv">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="ff" green="ff" red="ff" type="rgb"/>
@@ -173,6 +173,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Circle"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="jButton2">
       <Properties>
